// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabLinkFill renders 1`] = `
<a
  className="sc-iZAQtj ciRLJr"
/>
`;

exports[`TabLinkFill renders Href 1`] = `
<a
  className="sc-iZAQtj ciRLJr"
  href="www.google.com"
/>
`;

exports[`TabLinkFill renders count 1`] = `
<a
  className="sc-iZAQtj ciRLJr"
>
  <span
    className="sc-kvczt eexUxa"
  >
    2
  </span>
</a>
`;

exports[`TabLinkFill renders element left 1`] = `
<a
  className="sc-iZAQtj ciRLJr"
>
  <div
    className="sc-gfrqJO gpGoHG"
  >
    <span>
      Element
    </span>
  </div>
</a>
`;

exports[`TabLinkFill renders isTop 1`] = `
<a
  className="sc-iZAQtj ciRLJr"
/>
`;

exports[`TabLinkFill renders size 1`] = `
<a
  className="sc-iZAQtj TTMRZ"
  size="small"
/>
`;
